Add parametric tests.

--- a/massa-serialization/Cargo.toml
+++ b/massa-serialization/Cargo.toml
@@ -12,3 +12,6 @@ thiserror = {workspace = true}
 nom = {workspace = true}
 unsigned-varint = {workspace = true, "features" = ["nom"]}
 num = {workspace = true}
+
+[dev-dependencies]
+paste = {workspace = true}
