--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,6 +148,7 @@ num = "=0.4"
 num_enum = "0.7"
 paginate = "1.1"
 parking_lot = "0.12"
+paste = "1.0"
 pbkdf2 = { version = "=0.12", features = ["simple"] }
 prometheus = "0.13"
 rand = "0.8"
