--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -201,8 +201,11 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions-rs/cargo@v1
         with:
-          command: install
-          args: cargo-nextest
+          command: test
+          args: --features testing --doc
+
+      - uses: taiki-e/install-action@cargo-llvm-cov
+      - uses: taiki-e/install-action@nextest
       - uses: actions-rs/cargo@v1
         with:
           command: nextest
@@ -210,10 +213,17 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clean
+          args: --workspace
       - uses: actions-rs/cargo@v1
         with:
           command: test
           args: --doc
+          command: llvm-cov nextest
+          args: --features testing --retries 10 --workspace --lcov --output-path lcov.info
+      - uses: codecov/codecov-action@v3
+        with:
+          files: lcov.info
+          fail_ci_if_error: false
 
   build: # quick hack because bors wrongly detect matrix jobs status
     needs: full
