--- a/massa-api/Cargo.toml
+++ b/massa-api/Cargo.toml
@@ -41,3 +41,4 @@ massa_consensus_exports = { workspace = true, "features" = ["testing"] }
 tempfile = { workspace = true }
 num = { workspace = true }
 massa_grpc = { workspace = true, features = ["testing"] }
+massa_final_state = { workspace = true }
