--- a/massa-executed-ops/Cargo.toml
+++ b/massa-executed-ops/Cargo.toml
@@ -6,13 +6,15 @@ edition = "2021"
 
 [dependencies]
 nom = {workspace = true}
-parking_lot = {workspace = true, "features" = ["deadlock_detection"]}
 massa_models = {workspace = true}
-massa_hash = {workspace = true}
 massa_serialization = {workspace = true}
 massa_db_exports = {workspace = true}
 
 [dev-dependencies]
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
-massa_ledger_worker = {workspace = true}
 massa_db_worker = {workspace = true}
+massa_hash = {workspace = true}
+parking_lot = {workspace = true}
+
+[features]
+testing = ["massa_models/testing"]
