ci: skip macOS ...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macOS-latest
+          # - macOS-latest
           # - windows-latest
     steps:
       - name: Free Disk Space (Ubuntu)
