--- a/massa-api/Cargo.toml
+++ b/massa-api/Cargo.toml
@@ -42,3 +42,4 @@ tempfile = { workspace = true }
 num = { workspace = true }
 massa_grpc = { workspace = true, features = ["testing"] }
 massa_final_state = { workspace = true }
+massa_channel = { workspace = true }
