--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -52,8 +52,11 @@ tower-http = { workspace = true, "features" = ["cors"] }
 tracing = { workspace = true }
 
 [dev-dependencies]
+massa_async_pool = { workspace = true }
+massa_bootstrap = { workspace = true , "features" = ["testing"]}
 massa_channel = { workspace = true }
 massa_consensus_exports = { workspace = true, "features" = ["testing"] }
+massa_executed_ops = { workspace = true }
 massa_final_state = { workspace = true }
 mockall = { workspace = true }
 num = { workspace = true }
