--- a/massa-pool-exports/Cargo.toml
+++ b/massa-pool-exports/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["crossbeam-channel"]
+testing = ["mockall"]
 
 [dependencies]
 serde = {workspace = true, "features" = ["derive"]}
 tokio = {workspace = true, "features" = ["sync"]}
-crossbeam-channel = {workspace = true, "optional" = true}
+mockall = {workspace = true, "optional" = true}
 massa_models = {workspace = true}
 massa_storage = {workspace = true}
 massa_time = {workspace = true}
@@ -18,3 +18,5 @@ massa_pos_exports = {workspace = true}
 massa_execution_exports = {workspace = true}
 
 [dev-dependencies]
+mockall = {workspace = true}
+
