--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -49,12 +49,12 @@ blake3 = { workspace = true }
 bs58 = { workspace = true }
 rand = { workspace = true }
 rand_xoshiro = { workspace = true }
-parking_lot = { workspace = true, "features" = ["deadlock_detection"] }
+parking_lot = { workspace = true, features = ["deadlock_detection"] }
 tracing = { workspace = true }
 serde_json = { workspace = true } # BOM UPGRADE     Revert to "1.0" if problem
-num = { workspace = true, "features" = [
+num = { workspace = true, features = [
     "serde",
-] } # BOM UPGRADE     Revert to {"version": "0.4", "features": ["serde"]} if problem
+] } # BOM UPGRADE     Revert to {"version": "0.4", features: ["serde"]} if problem
 sha2 = { workspace = true }
 sha3 = { workspace = true }
 libsecp256k1 = { workspace = true }
@@ -85,11 +85,17 @@ massa-proto-rs = { workspace = true }
 
 [dev-dependencies]
 massa_storage = { workspace = true }
-tokio = { workspace = true, "features" = ["sync"] }
+massa_execution_exports = { workspace = true, features = ["testing"] }
+massa_final_state = { workspace = true, features = ["testing"] }
+massa_ledger_exports = { workspace = true, features = ["testing"] }
+massa_pos_exports = { workspace = true, features = ["testing"] }
 massa_pos_worker = { workspace = true }
+massa-sc-runtime = { workspace = true, features = ["testing"] }
+massa_wallet = { workspace = true, features = ["testing"] }
+massa_metrics = { workspace = true, features = ["testing"] }
+massa_db_worker = { workspace = true }
+tokio = { workspace = true, features = ["sync"] }
 massa_ledger_worker = { workspace = true }
 serial_test = { workspace = true }
 tempfile = { workspace = true }                                          # BOM UPGRADE     Revert to "3.2" if problem
 hex-literal = { workspace = true }
-massa_execution_exports = { workspace = true, "features" = ["testing"] }
-massa_final_state = { workspace = true, "features" = ["testing"] }
