--- a/massa-consensus-worker/Cargo.toml
+++ b/massa-consensus-worker/Cargo.toml
@@ -32,6 +32,10 @@ tokio = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"ve
 crossbeam-channel = {workspace = true, "optional" = true}   # BOM UPGRADE     Revert to {"version": "0.5.6", "optional": true} if problem
 
 [dev-dependencies]
+massa_pool_exports = {workspace = true, features = ["testing"]}
+massa_pos_exports = {workspace = true, features = ["testing"]}
+massa_protocol_exports = {workspace = true, features = ["testing"]}
 mockall = {workspace = true}
 rand = {workspace = true}
 itertools = {workspace = true}
+tokio = {workspace = true}
