--- a/massa-protocol-worker/Cargo.toml
+++ b/massa-protocol-worker/Cargo.toml
@@ -38,4 +38,7 @@ massa_versioning = {workspace = true}
 [dev-dependencies]
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
 serial_test = {workspace = true}   # BOM UPGRADE     Revert to "2.0.0" if problem
+massa_test_framework = {workspace = true}
+mockall = {workspace = true}
+mock_instant = {workspace = true}
 num = {workspace = true}
