--- a/massa-pos-exports/Cargo.toml
+++ b/massa-pos-exports/Cargo.toml
@@ -28,4 +28,5 @@ massa_db_exports = {workspace = true}
 [dev-dependencies]
 mockall = {workspace = true}
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
+assert_matches = {workspace = true}
 massa_db_worker = {workspace = true}
