--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,7 +144,7 @@ lazy_static = "1.4"
 libsecp256k1 = "=0.7"
 mio = "0.8"
 mockall = "0.11"
-mockall_wrap = { path = "../mockall-wrap" }
+mockall_wrap = { git = "https://github.com/AurelienFT/mockall-wrap", rev = "18f88253a000df96cf407dfe4b9158c69c0aeb96" }
 more-asserts = "0.3"
 nom = "=7.1"
 num = "=0.4"
