--- a/massa-versioning/Cargo.toml
+++ b/massa-versioning/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = []
+test-exports = []
 
 [dependencies]
 machine = { workspace = true }
