--- a/massa-factory-exports/Cargo.toml
+++ b/massa-factory-exports/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["massa_models/testing", "massa_protocol_exports/testing", "massa_pool_exports/testing"]
+test-exports = ["massa_models/test-exports", "massa_protocol_exports/test-exports", "massa_pool_exports/test-exports"]
 sandbox = []
 
 [dependencies]
