--- a/massa-ledger-worker/Cargo.toml
+++ b/massa-ledger-worker/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["tempfile", "massa_models/testing", "massa_ledger_exports/testing", "massa_db_worker", "parking_lot"]
+test-exports = ["tempfile", "massa_models/test-exports", "massa_ledger_exports/test-exports", "massa_db_worker", "parking_lot"]
 
 [dependencies]
 serde_json = {workspace = true}   # BOM UPGRADE     Revert to "1.0" if problem
