--- a/massa-node/Cargo.toml
+++ b/massa-node/Cargo.toml
@@ -22,7 +22,7 @@ sandbox = [
     "massa_models/sandbox",
     "massa_metrics/sandbox",
 ]
-testing = ["massa_metrics/testing", "massa_grpc/testing"]
+test-exports = ["massa_metrics/test-exports", "massa_grpc/test-exports"]
 
 [dependencies]
 crossbeam-channel = { workspace = true } # BOM UPGRADE     Revert to "0.5.6" if problem
