--- a/massa-pool-exports/Cargo.toml
+++ b/massa-pool-exports/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["mockall", "mockall_wrap"]
+test-exports = ["mockall", "mockall_wrap"]
 
 [dependencies]
 serde = {workspace = true, "features" = ["derive"]}
