--- a/massa-pool-worker/Cargo.toml
+++ b/massa-pool-worker/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["massa_execution_exports/testing", "massa_pos_exports/testing", "massa_wallet/testing"]
+test-exports = ["massa_execution_exports/test-exports", "massa_pos_exports/test-exports", "massa_wallet/test-exports"]
 
 [dependencies]
 tracing = {workspace = true}
@@ -21,7 +21,7 @@ tokio = {workspace = true, "features" = ["sync"]}
 mockall = {workspace = true}
 massa_signature = {workspace = true}
 massa_hash = {workspace = true}
-massa_pool_exports = {workspace = true, "features" = ["testing"]}
-massa_pos_exports = {workspace = true, "features" = ["testing"]}
-massa_execution_exports = {workspace = true, "features" = ["testing"]}
+massa_pool_exports = {workspace = true, "features" = ["test-exports"]}
+massa_pos_exports = {workspace = true, "features" = ["test-exports"]}
+massa_execution_exports = {workspace = true, "features" = ["test-exports"]}
 crossbeam-channel = {workspace = true}
