--- a/massa-protocol-exports/Cargo.toml
+++ b/massa-protocol-exports/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-testing = ["tempfile"]
+test-exports = ["tempfile"]
 
 [dependencies]
 displaydoc = {workspace = true}
