--- a/massa-test-framework/Cargo.toml
+++ b/massa-test-framework/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 
 [dependencies]
 massa_hash = { path = "../massa-hash" }
-massa_models = { path = "../massa-models", features = ["testing"]}
+massa_models = { path = "../massa-models", features = ["test-exports"]}
 massa_signature = { path = "../massa-signature" }
 tracing-subscriber = { workspace = true }
