--- a/massa-wallet/Cargo.toml
+++ b/massa-wallet/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-testing = ["tempfile", "massa_models/testing"]
+test-exports = ["tempfile", "massa_models/test-exports"]
 
 [dependencies]
 displaydoc = {workspace = true}
