--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,7 +101,7 @@ massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs.git", rev = "a2e335b1493d302aa03b87e5fd611a2f2c21afdb" }
-massa-sc-runtime = { path = "../massa-sc-runtime" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "fix-sc-gas" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "branch" = "main" }
 
 # Common dependencies
