--- a/massa-ledger-exports/Cargo.toml
+++ b/massa-ledger-exports/Cargo.toml
@@ -5,10 +5,11 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-test-exports = ["tempfile", "massa_models/test-exports"]
+test-exports = ["tempfile", "massa_models/test-exports", "mockall"]
 
 [dependencies]
 displaydoc = {workspace = true}
+mockall = {workspace = true, optional = true}
 serde = {workspace = true, "features" = ["derive"]}
 serde_json = {workspace = true}   # BOM UPGRADE     Revert to "1.0" if problem
 serde_with = { workspace = true }
