--- a/massa-final-state/Cargo.toml
+++ b/massa-final-state/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-test-exports = ["massa_ledger_worker/test-exports", "massa_async_pool/test-exports", "massa_pos_exports/test-exports", "serde_json", "parking_lot", "tempfile", "massa_db_worker", "massa_signature", "mockall"]
+test-exports = ["massa_ledger_worker/test-exports", "massa_async_pool/test-exports", "massa_pos_exports/test-exports", "serde_json", "parking_lot", "tempfile", "massa_signature", "mockall"]
 sandbox = ["massa_async_pool/sandbox"]
 bootstrap_server = []
 
@@ -34,7 +34,6 @@ massa_hash = {workspace = true}
 
 serde_json = {workspace = true, optional = true}
 parking_lot = {workspace = true, "features" = ["deadlock_detection"], optional = true}
-massa_db_worker = {workspace = true, optional = true}
 massa_signature = {workspace = true, optional = true}
 tempfile = {workspace = true, optional = true}
 
