--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, staging, trying]
   pull_request:
-    branches: [main, 'testnet_*']
+    branches: [main, 'testnet_*', 'securnet_wip']
     types:
     - opened
     - reopened
@@ -37,7 +37,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "sanity"
-          save-if: ${{ github.ref_name == 'testnet_26' }}
+          save-if: ${{ github.ref_name == 'securnet_wip' }}
       - uses: actions-rs/cargo@v1
         with:
           command: fmt
@@ -59,7 +59,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "check"
-          save-if: ${{ github.ref_name == 'testnet_26' }}
+          save-if: ${{ github.ref_name == 'securnet_wip' }}
       - uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
@@ -86,7 +86,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "clippy"
-          save-if: ${{ github.ref_name == 'testnet_26' }}
+          save-if: ${{ github.ref_name == 'securnet_wip' }}
       - uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
@@ -194,7 +194,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "massa"
-          save-if: ${{ github.ref_name == 'testnet_26' }}
+          save-if: ${{ github.ref_name == 'securnet_wip' }}
       - uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
@@ -273,7 +273,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "doc"
-          save-if: ${{ github.ref_name == 'testnet_26' }}
+          save-if: ${{ github.ref_name == 'securnet_wip' }}
       - uses: arduino/setup-protoc@v1
         with:
           version: '3.x'
