Mock Final State/Improve tests execution (#4512)
* Use a controller for final state to be able to mock it

* Fix all formatting issues.

* Use more mocks in execution tests

* Fix test nested call usage

* improve some tests execution

* Fix tests async message and compact the test of executed

* Fix more execution tests

* Fix more tests.

* Update more tests

* Finish fixing all executions tests.

* Improve naming

* add more comment

* Fix comment

--- a/massa-final-state/Cargo.toml
+++ b/massa-final-state/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Massa Labs <info@massa.net>"]
 edition = "2021"
 
 [features]
-test-exports = ["massa_ledger_worker/test-exports", "massa_async_pool/test-exports", "massa_pos_exports/test-exports", "serde_json", "parking_lot", "tempfile", "massa_db_worker", "massa_signature"]
+test-exports = ["massa_ledger_worker/test-exports", "massa_async_pool/test-exports", "massa_pos_exports/test-exports", "serde_json", "parking_lot", "tempfile", "massa_signature", "mockall"]
 sandbox = ["massa_async_pool/sandbox"]
 bootstrap_server = []
 
@@ -17,6 +17,7 @@ bs58 = {workspace = true, "features" = ["check"]}   # BOM UPGRADE     Revert to 
 thiserror = {workspace = true}
 tracing = {workspace = true}
 num = {workspace = true}
+mockall = {workspace = true, optional = true}
 anyhow = {workspace = true}
 massa_ledger_exports = {workspace = true}
 massa_ledger_worker = {workspace = true, "optional" = true}
@@ -33,7 +34,6 @@ massa_hash = {workspace = true}
 
 serde_json = {workspace = true, optional = true}
 parking_lot = {workspace = true, "features" = ["deadlock_detection"], optional = true}
-massa_db_worker = {workspace = true, optional = true}
 massa_signature = {workspace = true, optional = true}
 tempfile = {workspace = true, optional = true}
 
